# file-server-flask

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/web/: manage.py
services/web/project/: __init__.py  app.py  config.py  models.py  utils.py
services/web/project/api/: __init__.py  files.py
tests/web/: test_api.py  test_basics.py  test_models.py  test_utils.py
